# ChocoBot

./: .gitignore  README.md  default.nix  pyproject.toml  settings.json.example  shard.yml  shards.nix  shell.nix
chocobot/: __init__.py  __main__.py  commands.py  customizations.py  memes.py  replies.py
src/: ChocoBot.cr  commands.cr  memes.cr
